Examiner Changes | 2026 Feb
------------------------------
- fixed linking items to chat

Examiner Changes | 2026 Jan
------------------------------
- Updated the TOC version to 120000 for Midnight pre-patch
- changed formula and method to determine the colors of the guild banner for a correct output
- some minor changes in declarations and methods

Examiner Changes | 2020 Oct 31
------------------------------
- Updated the TOC version to 90001 for the Shadowlands 9.0.1 pre-patch.
- Frames that use backdrops are now created using the "BackdropTemplate".
- Updated the AzDropDown library to Rev 14.
- Updated the AzDialog library to Rev 02.

Examiner Changes | 2018 Aug 12
------------------------------
- Improved the ItemString breakdown when holding down [Alt + Shift] on an item slot.
- Removed the "Examiner.xml" file, all required files are now referenced from the toc file.
- Stats: Removed "Reforged Items" from the details page.
- DelayedScan: Fixed "Delayed Gear Scan Fix" not being able to be turned off.
- Updated the AzDropDown and LibItemString libraries.

Examiner Changes | 2018 Jul 25
------------------------------
- Updated the TOC version to 80000 for the Battle for Azeroth 8.0 pre-patch.
- Fixed the PlaySound() API call, which was changed in the 7.3.0 patch.
- Feats: Disabled wordwrap for the achievement names and descriptions to fix wrapping issues.

Examiner Changes | 2016 Aug 30
------------------------------
- GetUpgradedItemLevel: This library has been renamed into LibItemString. It has a few more features as well as using tooltip scanning to get the true itemLevel.

Examiner Changes | 2016 Aug 24
------------------------------
- GetUpgradedItemLevel: Fixed upgradeID pattern not having a capture group.

Examiner Changes | 2016 Aug 22
------------------------------
- TOC version updated to 70000 for the Legion 7.0.3 pre-patch.
- Talents: Updated this module so it should be working again (thanks Farami).