@@ -1,6 +1,7 @@
 Examiner Changes | 2026 Feb
 ------------------------------
 - fixed linking items to chat
+- fixed bug in color setting at itemusage
 
 Examiner Changes | 2026 Jan
 ------------------------------
